--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -28,6 +28,9 @@
               ♡<%= book.favorites.count %>
             <% end %>
           </td>
+          <td>
+            コメント数：<%= book.book_comments.count %>
+          </td>
         <% end %>
       </tr>
     <% end %>
