--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,8 +21,46 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+          <% if @book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <% else %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+              ♡<%= @book.favorites.count %>
+            <% end %>
+          </td>
+          <td>コメント数：<%= @book.book_comments.count %></td>
+        <% end %>
         </tr>
       </table>
+      <table>
+        <tr>
+        <% @book.book_comments.each do |book_comment| %>
+          <td>
+            <%#= image_tag book_comment.user.get_profile_image(100,100) %><br>
+            <%= book_comment.user.name %>
+          </td>
+          <td>
+            <%= book_comment.comment %>
+          </td>
+          <td>
+            <% if book_comment.user == current_user %>
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete,  class: "btn btn-sm btn-danger"%>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </table>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', cols: '100', placeholder: "コメントをここに" %><br>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
