--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,10 +8,30 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+	  <th>follows</th>
+	  <th>
+	    <%= link_to user_followings_path(user) do %>
+	      <%= user.followings.count %>
+	    <% end %>
+	    </th>
+  </tr>
+  <tr>
+	  <th>followers</th>
+	  <th>
+	    <%= link_to user_followers_path(user) do %>
+	      <%= user.followers.count %>
+	    <% end %>
+	   </th>
+  </tr>
 </table>
 
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if user == current_user %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% else %>
+    <%= render "relationships/btn", user: user %>
   <% end %>
 </div>
