--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,7 +18,9 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         <td>コメント数: <%= book.book_comments.count %></td>
-        <td><%= render "favorites/btn", book: book %></td>
+        <td class="favorite_btn_<%= book.id %>">
+          <%= render "favorites/favorite_btn", book: book %>
+        </td>
       </tr>
     <% end %>
   </tbody>
